# StudyAgentBot

./: .env.example  .gitignore  Caddyfile  Dockerfile.postgres  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0a9c3a5e7f21_add_chat_messages_and_chat_subscriptions.py  6b3f419c2d8a_create_users_and_deadlines.py  a1b2c3d4e5f6_add_available_chats.py
app/: config.py  db.py  models.py
flows/: Chat-Listener.json  Chat-Models.json  Postgres-Sub-Workflow.json  RAG_indexing.json  README.md  Reminder-Workflow.json  Sub RAG_indexing.json  Sub RAG_search.json  TG Bot Chat.json  Tg-bot-chat.json  Web-Chat.json  listener-for-new-chats.json  main-flow.json  postgres.json  reminder.json  telegram triggers.json
scripts/: init-data.sh
web/backend/: Dockerfile  auth.py  config.py  db.py  main.py  models.py  pyproject.toml
web/backend/routes/: auth.py  chats.py  deadlines.py  stats.py
web/frontend/: Dockerfile  next.config.js  package-lock.json  package.json
web/frontend/app/: layout.tsx  page.tsx
web/frontend/app/chats/: page.tsx
web/frontend/app/dashboard/: page.tsx
web/frontend/app/login/: page.tsx
web/frontend/app/stats/: page.tsx
web/frontend/components/: Navbar.tsx
web/frontend/lib/: api.ts  auth.ts
